--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
       <a
         class="btn btn-outline-primary"
         href="https://github.com/imadtoubal/Pytorch-Flask-Docker-App"
-        >Fork on GitHub</a
+        >Code GitHub</a
       >
     </div>
     <div class="container">
@@ -53,7 +53,7 @@
               width="150"
             />
             <small class="d-block mb-3 text-muted"
-              >© Toubal, Imad Eddine 2019</small
+              >© Frida de Sigley</small
             >
           </div>
           <div class="col-6 col-md">
@@ -99,10 +99,10 @@
             <h5>About</h5>
             <ul class="list-unstyled text-small">
               <li>
-                <a class="text-muted" href="http://www.toubal.com">About me</a>
+                <a class="text-muted" href="www.desigley.space">About me</a>
               </li>
               <li>
-                <a class="text-muted" href="https://www.github.com/imadtoubal"
+                <a class="text-muted" href="https://www.github.com/fdsig"
                   >GitHub</a
                 >
               </li>
