fixing no upload bug

--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
       </nav>
       <a
         class="btn btn-outline-primary"
-        href="https://github.com/imadtoubal/Pytorch-Flask-Docker-App"
+        href="https://github.com/fdsig/iaqa_app"
         >Code GitHub</a
       >
     </div>
@@ -62,15 +62,8 @@
               <li>
                 <a
                   class="text-muted"
-                  href="https://github.com/imadtoubal/Pytorch-Flask-Docker-App"
+                  href="https://github.com/fdsig/iaqa_app"
                   >Code on GitHub</a
-                >
-              </li>
-              <li>
-                <a
-                  class="text-muted"
-                  href="https://github.com/imadtoubal/Pytorch-Flask-Docker-App/issues"
-                  >How to contribute</a
                 >
               </li>
             </ul>
