--- a/templates/index.html
+++ b/templates/index.html
@@ -5,11 +5,9 @@
 <div class="row">
   <div class="col-sm-8 offset-sm-2">
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-      <h1 class="display-4">Pytorch Flask Docker App</h1>
-      <p class="lead">This project is aimed to help Pytorch machine learning developers to quickly build a Flask
-        web app
-        in a Docker container ready to be deployed. <br> <a
-          href="https://github.com/imadtoubal/Pytorch-Flask-Docker-App"> View on GitHub</a></p>
+      <h1 class="display-4">Image Aesthetic Quality Inference App</h1>
+      <p class="lead">This is an example of current state of the art vision transformers for Image Aesthetic Quality Assesment (IQA) <br> <a
+          href="https://github.com/fdsig/iaqa_app"> View on GitHub</a></p>
     </div>
   </div>
 </div>
@@ -33,8 +31,7 @@
     <div class="col-sm-6 offset-sm-3 my-5">
       <center>
         <p class="text-muted">
-          By default, this app uses MobileNetV2 image classifier that was pre-trained on the ImageNet dataset.
-          This can be easily changed with any custom deep learning model.
+         The model classifies images into high and low quality and gives a probability of high or low quality images.
         </p>
       </center>
     </div>
